[tool.poetry]
name = "rl-journey"
version = "0.1.0"
description = ""
authors = ["Cory Mosiman <cory.mosiman12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
jupyterlab = "^3.0.12"
pandas = "^1.2.3"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
